k8s/infra/jaegertracing/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: jaeger
    name: jaeger
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: jaeger
    template:
      metadata:
        labels:
          app: jaeger
      spec:
        containers:
          - image:  jaegertracing/all-in-one:1.15.1
            name: jaeger
            ports:
              - containerPort: 5775
                protocol: UDP
              - containerPort: 6831
                protocol: UDP
              - containerPort: 6832
                protocol: UDP
              - containerPort: 5778
              - containerPort: 16686
              - containerPort: 14268
              - containerPort: 9411
