k8s/infra/jaegertracing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  ports:
    - protocol: UDP
      port: 5775
      name: "5775"
    - protocol: UDP
      port: 6831
      name: "6831"
    - protocol: UDP
      port: 6832
      name: "6832"
    - protocol: TCP
      port: 5778
      name: "5778"
    - protocol: TCP
      port: 16686
      name: "16686"
    - protocol: TCP
      port: 14268
      name: "14268"
    - protocol: TCP
      port: 9411
      name: "9411"
  selector:
    app: jaeger
  sessionAffinity: None
  type: ClusterIP
