k8s/infra/jaegertracing/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: jaeger.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: jaeger
              servicePort: 16686
